@@ -19,3 +19,4 @@ hash_tags = #perl
 Apache::Test = 1.35
 CGI = 3.12
 Class::Load = 0.03
+autobox = 1.10
